Begun Stripe integration

--- a/job-board/before/client/.env
+++ b/job-board/before/client/.env
@@ -1,2 +1,5 @@
 VITE_API_URL=http://localhost:3000
+# Use this to test slowing your API DOWN
 VITE_TEST_SLOW_API=false
+# Use your actual development key for testing
+VITE_STRIPE_PUBLISHABLE_KEY=pk_live_some_key
