--- a/job-board/before/client/package.json
+++ b/job-board/before/client/package.json
@@ -19,11 +19,14 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "@t3-oss/env-core": "^0.6.0",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.258.0",
     "react": "^18.2.0",
@@ -45,10 +48,13 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "postcss": "^8.4.24",
     "shadcn-ui": "^0.3.0",
     "tailwindcss": "^3.3.2",
